Initial Version to check above-the-fold

--- a/src/client/app/splash/splash.template.html
+++ b/src/client/app/splash/splash.template.html
@@ -1,2 +1,7 @@
 
-<h1>Hola Mundo.</h1>
+<div class="splash-section splash-section-1 align-center">
+  <div data-ng-click="splash.video = true" class="play"><img data-ng-src="common/images/play-icon.png"/></div>
+  <div class="section-text margin-top-4">Suscríbete a Bask y recibe cada mes:</div>
+  <div class="section-text">Toallitas húmedas, pañales y ropita para tu bebé.</div>
+  <div class="margin-top-2"><a data-ui-sref="register" class="splash-button">Suscribirme</a></div>
+</div>
