--- a/src/client/index.html
+++ b/src/client/index.html
@@ -29,6 +29,7 @@
     <script src="app/layout/shell.js"></script>
     <!--endbuild-->
     <!--build:css-->
+    <link rel="stylesheet" href="common/css/splash.css">
     <!--endbuild-->
   </body>
 </html>
